--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ var yAxis = d3.svg.axis()
     .scale(y)
     .orient("right")
     .tickSize(-width)
-    .tickFormat(function(d) { return Math.round(d / 1e6) + "M"; });
+    .tickFormat(function(d) { return Math.round(d / 1e3) + "K"; });
 
 // An SVG element with a bottom-right origin.
 var svg = d3.select("body").append("svg")
