--- a/index.html
+++ b/index.html
@@ -88,24 +88,24 @@ d3.csv("population.csv", function(error, data) {
   // Convert strings to numbers.
   data.forEach(function(d) {
     d.people = +d.people;
-    d.year = +d.year;
-    d.age = +d.age;
+    d.month = +d.month;
+    //d.age = +d.age;
   });
 
   // Compute the extent of the data set in venue and month.years
   var age1 = d3.max(data, function(d) { return d.age; }),
-      year0 = d3.min(data, function(d) { return d.year; }),
-      year1 = d3.max(data, function(d) { return d.year; }),
-      year = year1;
+      month0 = d3.min(data, function(d) { return d.month; }),
+      month1 = d3.max(data, function(d) { return d.month; }),
+      month = month1;
 
   // Update the scale domains.
-  x.domain([year1 - age1, year1]);
+  x.domain([month1 - age1, month1]);
   y.domain([0, d3.max(data, function(d) { return d.people; })]);
 
   // Produce a map from year and birthyear to [distributed, scanned].
   data = d3.nest()
-      .key(function(d) { return d.year; })
-      .key(function(d) { return d.year - d.age; })
+      .key(function(d) { return d.month; })
+      .key(function(d) { return d.month - d.age; })
       .rollup(function(v) { return v.map(function(d) { return d.people; }); })
       .map(data);
 
@@ -120,13 +120,13 @@ d3.csv("population.csv", function(error, data) {
 
   // Add labeled rects for each month.year (so that no enter or exit is required).
   var birthyear = birthyears.selectAll(".birthyear")
-      .data(d3.range(year0 - age1, year1 + 1, 5))
+      .data(d3.range(month0 - age1, month1 + 1, 5))
     .enter().append("g")
       .attr("class", "birthyear")
       .attr("transform", function(birthyear) { return "translate(" + x(birthyear) + ",0)"; });
 
   birthyear.selectAll("rect")
-      .data(function(birthyear) { return data[year][birthyear] || [0, 0]; })
+      .data(function(birthyear) { return data[month][birthyear] || [0, 0]; })
     .enter().append("rect")
       .attr("x", -barWidth / 2)
       .attr("width", barWidth)
@@ -143,7 +143,7 @@ d3.csv("population.csv", function(error, data) {
       .data(d3.range(0, age1 + 1, 5))
     .enter().append("text")
       .attr("class", "age")
-      .attr("x", function(age) { return x(year - age); })
+      .attr("x", function(age) { return x(month - age); })
       .attr("y", height + 4)
       .attr("dy", ".71em")
       .text(function(age) { return age; });
@@ -152,22 +152,22 @@ d3.csv("population.csv", function(error, data) {
   window.focus();
   d3.select(window).on("keydown", function() {
     switch (d3.event.keyCode) {
-      case 37: year = Math.max(year0, year - 10); break;
-      case 39: year = Math.min(year1, year + 10); break;
+      case 37: month = Math.max(month0, month - 0); break;
+      case 39: month = Math.min(month1, month + 0); break;
     }
     update();
   });
 
   function update() {
-    if (!(year in data)) return;
-    title.text(year);
+    if (!(month in data)) return;
+    title.text(month);
 
     birthyears.transition()
         .duration(750)
-        .attr("transform", "translate(" + (x(year1) - x(year)) + ",0)");
+        .attr("transform", "translate(" + (x(month1) - x(month)) + ",0)");
 
     birthyear.selectAll("rect")
-        .data(function(birthyear) { return data[year][birthyear] || [0, 0]; })
+        .data(function(birthyear) { return data[month][birthyear] || [0, 0]; })
       .transition()
         .duration(750)
         .attr("y", y)
