--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ d3.csv("population.csv", function(error, data) {
       .attr("x", -barWidth / 2)
       .attr("width", barWidth)
       .attr("y", y)
-      .attr("height", function(value) { return height - y(value); });
+      .attr("height", function(value) { return height + y(value); });
 
   // Add labels to show birthyear.
   birthyear.append("text")
