--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ d3.csv("population.csv", function(error, data) {
 
   // Add labeled rects for each birthyear (so that no enter or exit is required).
   var birthyear = birthyears.selectAll(".birthyear")
-      .data(d3.range(year0 - age1, year1 + 1, 5))
+      .data(d3.range(year0 - age1, year1 + 1, 1))
     .enter().append("g")
       .attr("class", "birthyear")
       .attr("transform", function(birthyear) { return "translate(" + x(birthyear) + ",0)"; });
@@ -130,8 +130,8 @@ d3.csv("population.csv", function(error, data) {
     .enter().append("rect")
       .attr("x", -barWidth / 2)
       .attr("width", barWidth)
-      .attr("y", -y)
-      .attr("height", function(value) { return height + y(value); });
+      .attr("y", y)
+      .attr("height", function(value) { return height + y(-value); });
 
   // Add labels to show birthyear.
   birthyear.append("text")
