--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@ d3.csv("population.csv", function(error, data) {
     .enter().append("rect")
       .attr("x", -barWidth / 2)
       .attr("width", barWidth)
-      .attr("y", y)
-      .attr("height", function(value) { return height + y(-value); });
+      .attr("y", -y)
+      .attr("height", function(value) { return height + y(value); });
 
   // Add labels to show birthyear.
   birthyear.append("text")
