--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@ rect:first-child {
 <script src="//d3js.org/d3.v3.min.js"></script>
 <script>
 
-var margin = {top: 20, right: 40, bottom: 30, left: 10},
+var margin = {top: 20, right: 40, bottom: 30, left: 20},
     width = 960 - margin.left - margin.right,
     height = 700 - margin.top - margin.bottom,
-    barWidth = Math.floor(width / 15) - 1;
+    barWidth = Math.floor(width / 11) - 1;
 
 var x = d3.scale.linear()
     .range([barWidth / 2, width - barWidth / 2]);
@@ -120,7 +120,7 @@ d3.csv("population.csv", function(error, data) {
 
   // Add labeled rects for each birthyear (so that no enter or exit is required).
   var birthyear = birthyears.selectAll(".birthyear")
-      .data(d3.range(year0 - age1, year1 + 1, .01))
+      .data(d3.range(year0 - age1, year1 + 1, 0.01))
     .enter().append("g")
       .attr("class", "birthyear")
       .attr("transform", function(birthyear) { return "translate(" + x(birthyear) + ",0)"; });
