--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ rect:first-child {
 
 var margin = {top: 20, right: 40, bottom: 30, left: 20},
     width = 960 - margin.left - margin.right,
-    height = 1040 - margin.top - margin.bottom,
+    height = 860 - margin.top - margin.bottom,
     barWidth = Math.floor(width / 11) - 1;
 
 var x = d3.scale.linear()
@@ -94,7 +94,7 @@ d3.csv("population.csv", function(error, data) {
 
   // Compute the extent of the data set in age and years.
   var age1 = d3.max(data, function(d) { return d.age; }),
-      year0 = d3.max(data, function(d) { return d.year; }),
+      year0 = d3.min(data, function(d) { return d.year; }),
       year1 = d3.max(data, function(d) { return d.year; }),
       year = year1;
 
@@ -120,7 +120,7 @@ d3.csv("population.csv", function(error, data) {
 
   // Add labeled rects for each birthyear (so that no enter or exit is required).
   var birthyear = birthyears.selectAll(".birthyear")
-      .data(d3.range(year0 - age1, year1 + 1, 0.01))
+      .data(d3.range(year0 - age1, year1 + .01, 0.01))
     .enter().append("g")
       .attr("class", "birthyear")
       .attr("transform", function(birthyear) { return "translate(" + x(birthyear) + ",0)"; });
