--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ d3.csv("population.csv", function(error, data) {
 
   // Add labeled rects for each birthyear (so that no enter or exit is required).
   var birthyear = birthyears.selectAll(".birthyear")
-      .data(d3.range(year0 - age1, year1 + 1, 0.01))
+      .data(d3.range(year0 - age1, year1 + 0.01, 5))
     .enter().append("g")
       .attr("class", "birthyear")
       .attr("transform", function(birthyear) { return "translate(" + x(birthyear) + ",0)"; });
@@ -134,9 +134,9 @@ d3.csv("population.csv", function(error, data) {
       .attr("height", function(value) { return height + y(value); });
 
   // Add labels to show birthyear.
-  /* birthyear.append("text")
+  birthyear.append("text")
       .attr("y", height - 4)
-      .text(function(birthyear) { return birthyear; }); */
+      .text(function(birthyear) { return birthyear; });
 
   // Add labels to show age (separate; not animated).
   svg.selectAll(".age")
